--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  </div>
 
   <!-- Navbar on small screens -->
-  <div href="#s1"id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
+  <div href="#s1" onclick="openNav()" id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
     <a href="#s2" onclick="openNav()" class="w3-bar-item w3-button">Intro</a>
     <a href="#s3" onclick="openNav()" class="w3-bar-item w3-button">About</a>
     <a href="#s4" onclick="openNav()" class="w3-bar-item w3-button">Projects</a>
-<a  class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal"  id="google_translate_element"></a>
+<a  class="w3-bar-item w3-button w3-right w3-hover-teal"  id="google_translate_element"></a>
   </div>
 </div>
 
@@ -326,16 +326,13 @@ Nanly 32 is android games colection app that is inspirated from old school MAME3
 <div class="w3-quarter">
 <div class="w3-card w3-white">
 <div   id="F1Fv1"  ></div>
-<iframe id="1pv1" width="100%"  src="https://www.youtube.com/embed/ocK-64jsfHM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<!-- <iframe width="100%" src="https://www.youtube.com/embed/W9P_qUnMaFg?list=RDCLAK5uy_n7Y4Fp2-4cjm5UUvSZwdRaiZowRs5Tcz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- <img src="https://www.w3schools.com/w3images/snow.jpg" alt="Snow" style="width:100%">
- --> <div  class="w3-container">
-  <h3>Customer 1</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+<iframe id="1pv1" width="100%"  src="https://www.youtube.com/embed/uHIaXVySftU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <div  class="w3-container">
+  <h3>Highlights</h3>
+  <h4> home made cinematic video  </h4>
+  
+
+  <p> fine art of games trend </p>
   </div>
   </div>
 </div>
@@ -345,12 +342,10 @@ Nanly 32 is android games colection app that is inspirated from old school MAME3
 <div   id="F1Fv2"  ></div>
 <iframe id="1pv2" width="100%" src="https://www.youtube.com/embed/jQUQfvWsH20" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="w3-container">
-  <h3>Customer 2</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <h4>show time</h4>
+  <h3>playing virtuel games in real world</h3>
+
+  <p> simple "best case scenario" exemples </p>
   </div>
   </div>
 </div>
@@ -358,14 +353,14 @@ Nanly 32 is android games colection app that is inspirated from old school MAME3
 <div class="w3-quarter">
 <div class="w3-card w3-white">
 <div   id="F1Fv3"  ></div>
-<iframe id="1pv3" width="100%" src="https://www.youtube.com/embed/G4DZwDyPrX0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="1pv3" width="100%" src="https://www.youtube.com/embed/ocK-64jsfHM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="w3-container">
-  <h3>Customer 3</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <h3>What You See Is What You Get</h3>
+  <h4>this is simple demonstration</h4>
+
+ 
+  <p> </p>
+  <p> </p>
   </div>
   </div>
 </div>
@@ -378,12 +373,9 @@ Nanly 32 is android games colection app that is inspirated from old school MAME3
 <div class="w3-container w3-padding-64 w3-theme-l5" id="spechP1">
   <div class="w3-row">
     <div class="w3-col m5">
-    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
-      <h3>Address</h3>
-      <p>Swing by for a cup of coffee, or whatever.</p>
-      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Chicago, US</p>
-      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +00 1515151515</p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Download</span></div>
+      <h3>get it from oficial google play store</h3>
+	  <img src="./g p l .png"  onclick="window.open('https://twitter.com/super1kinger')" title="https://twitter.com/super1kinger" style="cursor:pointer;width:70%;min-height:150px;max-height:550px;">       
     </div>
     <div class="w3-col m7">	
 	<p class="w3-center ">TECHNICAL SPECIFICATIONS :</p>
@@ -846,8 +838,8 @@ I have some good ideat that i dewolp for world wide usage thata i think can help
 <div style="position:apsolute;" >
 
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" onclick="window.open('https://www.youtube.com/channel/UCVM2N31UIa0XZWc2SspRekg/videos')"  ><i class="fab fa-youtube"></i></a>
-  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" onclick="window.open('https://twitter.com/super1kinger')" title="Twitter"><i class="fab fa-twitter"></i></a>
-  <a class="w3-button w3-large w3-teal" href="javascript:void(0)"  onclick="document.getElementById('idtk').style.display='block'" style="position:relative;width:44px;height:43px">
+  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" onclick="window.open('https://twitter.com/super1kinger')"><i class="fab fa-twitter"></i></a>
+  <a class="w3-button w3-large w3-teal" href="javascript:void(0)" onclick="document.getElementById('idtk').style.display='block'" style="position:relative;width:44px;height:43px">
   
     <svg xmlns="http://www.w3.org/2000/svg"  stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" style="margin-left:-10px;margin-top:-2px;}">
         <g  transform="translate(0.979236, 0.000000)" fill-rule="nonzero">
