--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	
 	
 
-<a  class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-light-grey"  id="google_translate_element"></a>
+<a  class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-light-grey"  id="8google_translate_element"></a>
     </div>
 	
   <div class=" w3-button  w3-right updn"  >
@@ -162,9 +162,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Navbar on small screens -->
   <div href="#s1" onclick="openNav()" id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
     <a href="#s2" onclick="openNav()" class="w3-bar-item w3-button">Intro</a>
+	
+<a  class="w3-bar-item w3-button "  id="google_translate_element"></a>
+
     <a href="#s3" onclick="openNav()" class="w3-bar-item w3-button">About</a>
     <a href="#s4" onclick="openNav()" class="w3-bar-item w3-button">Projects</a>
-<a  class="w3-bar-item w3-button w3-right w3-hover-teal"  id="google_translate_element"></a>
   </div>
 </div>
 
