--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div href="#s1" onclick="openNav()" id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
     <a href="#s2" onclick="openNav()" class="w3-bar-item w3-button">Intro</a>
 	
-<a  class="w3-bar-item w3-button "  id="google_translate_element"></a>
+<a  class="w3-bar-item w3-button "  id="google_translate_element_2"></a>
 
     <a href="#s3" onclick="openNav()" class="w3-bar-item w3-button">About</a>
     <a href="#s4" onclick="openNav()" class="w3-bar-item w3-button">Projects</a>
@@ -870,6 +870,8 @@ I have some good ideat that i dewolp for world wide usage thata i think can help
 </footer>
 <script type="text/javascript">
 function googleTranslateElementInit() {
+
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element_2');
   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
 }
 </script>
