--- a/index.html
+++ b/index.html
@@ -870,9 +870,11 @@ I have some good ideat that i dewolp for world wide usage thata i think can help
 </footer>
 <script type="text/javascript">
 function googleTranslateElementInit() {
+   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
 
-  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element_2');
-  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+function googleTranslateElementInit_2() {
+   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element_2');
 }
 </script>
 
