--- a/index.html
+++ b/index.html
@@ -882,6 +882,7 @@ function googleTranslateElementInit_2() {
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit_2"></script>
 <script>
 
 
