--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@ function googleTranslateElementInit() {
 </script>
 <script>
 function googleTranslateElementInit_2() {
-   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element_2');
+   new google.translate.TranslateElement_2({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element_2');
 }
 </script>
 
