--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         </div>
         <div class="modal-body">
 		
-		  <div class="w3-dropdown-content w3-card-4 w3-bar-block"  id="ooooLDw" >
+		  <div class="w3-dropdown-content w3-card-4 w3-bar-block"  id="LDw" >
 	
 	<a  class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-light-grey"  id="google_translate_element"></a>
 	
