--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="#s3" onclick="openNav()" class="w3-bar-item w3-button">About</a>
     <a href="#s4" onclick="openNav()" class="w3-bar-item w3-button">Projects</a>
 	  
-  <button type="button"  data-toggle="modal" data-target="#myModalGT"  class="w3-button ">Language </button>	   
+  <a data-toggle="modal" data-target="#myModalGT"   onclick="mDn()" class="w3-button ">Language </a>	   
   </div>
 </div>
 
