--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title">Select your language</h4>
         </div>
         <div class="modal-body">
 		
-		  <div class="w3-dropdown-content w3-card-4 w3-bar-block"  id="LDw" >
+		  <div class="w3-dropdown-content w3-card-4 w3-bar-block"  >
 	
 	<a  class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-light-grey"  id="google_translate_element"></a>
 	
@@ -173,17 +173,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <a href="#s2" onclick="openNav()" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Intro</a>
   <a href="#s3" onclick="openNav()" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
   <a href="#s4" onclick="openNav()" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Projects</a>
-    <div class="w3-dropdown w3-hide-small  w3-right  w3-button"  onclick="mDn()">
+    <div class="w3-dropdown w3-hide-small  w3-right  w3-button" >
   <!--  <button class="w3-button ">Language </button>     
    -->
 
   <button type="button"  data-toggle="modal" data-target="#myModalGT"  class="w3-button ">Language </button>	
  
-	
-  <div class=" w3-button  w3-right updn"  >
-  <span id="dwn" style="display:block"> &#x21D3;</span> <span id="upp" style="display:none"> &#x21D1;</span> 
-  </div>
-	
+
   </div> 
   <!--
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Search"><i class="fa fa-search"></i></a>
@@ -929,33 +925,9 @@ function outFunc() {
   tooltip.innerHTML = "Copy to clipboard";
 }
 
-/* When the user clicks on the button, 
-toggle between hiding and showing the dropdown content */
 
 
-function mDn() {
 
-  document.getElementById("LDw").classList.toggle("show");
-  if (document.getElementById("dwn").style.display == "none"){
-	   document.getElementById("dwn").style.display = "block"}
-	   else{document.getElementById("dwn").style.display = "none"}
-	   
-  if (document.getElementById("upp").style.display == "none"){
-	   document.getElementById("upp").style.display ="block"}
-	   else{document.getElementById("upp").style.display = "none"}
-  
-}
-
-// Close the dropdown if the user clicks outside of it
-document.getElementById("LDw").onclick = function(e) {
-  if (!e.target.matches('.dropbtn')) {
-  var myDropdown = document.getElementById("LDw");
-    if (myDropdown.classList.contains('show')) {
-      myDropdown.classList.remove('show');  
-	  
-    }
-  }
-}
 /////za modalo e ova skripta
 var f1v1 = document.getElementById("1pv1");
 var f1v2 = document.getElementById("1pv2");
