--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Select your language</h4>
+          <h4 class="modal-title">333Select your language</h4>
         </div>
         <div class="modal-body">
 		
-		  <div class="w3-dropdown-content w3-card-4 w3-bar-block"  >
+		  <div class="w3-card-4 w3-bar-block"  >
 	
 	<a  class="w3-bar-item w3-button w3-right w3-hover-light-grey"  id="google_translate_element"></a>
 	
