--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@ I have some good ideat that i dewolp for world wide usage thata i think can help
 
 <script type="text/javascript">
 function googleTranslateElementInit() {
-   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
 }
 </script>
 
@@ -1018,12 +1018,6 @@ function openNav() {
     x.className = x.className.replace(" w3-show", "");
   }
 }
-
-
-
-
-
-
 </script>
 
 </body>
