--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Select your language</h4>
+          <h4 class="modal-title">333Select your language</h4>
         </div>
         <div class="modal-body">
 		
@@ -894,10 +894,9 @@ I have some good ideat that i dewolp for world wide usage thata i think can help
     
 </footer>
 
-
 <script type="text/javascript">
 function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL}, 'google_translate_element');
 }
 </script>
 
@@ -1018,6 +1017,12 @@ function openNav() {
     x.className = x.className.replace(" w3-show", "");
   }
 }
+
+
+
+
+
+
 </script>
 
 </body>
