--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html  id="s1">
-<title>1kinger websajto</title>
+<title>1kinger web</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -192,7 +192,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="#s3" onclick="openNav()" class="w3-bar-item w3-button">About</a>
     <a href="#s4" onclick="openNav()" class="w3-bar-item w3-button">Projects</a>
 	  
-  <a data-toggle="modal" data-target="#myModalGT"   onclick="mDn()" class="w3-button ">Language </a>	   
+  <a data-toggle="modal" data-target="#myModalGT"  onclick="openNav()" class="w3-button w3-bar-item">Language </a>	   
   </div>
 </div>
 
