--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html  id="s1">
+
+<head>
 <title>1kinger web</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -259,19 +261,21 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
 	 <h5 class="w3-center  w3-text-grey">how can we motivate 1kinger??</h5>
       <p class="w3-large w3-text-grey w3-hide-medium">
-	you can motivte trught social media. it will be nice that you if you shere this story to other people. i dont have plans to get famos on that social media , just created it to work as modern forum for people to coperate each other with any quastion , critics , sugestion , comentars and somthink like that..  
+You can motivate through social media. it would be nice for you to share this story with other people.
+ I have no plans to be famous on social media, I just created it to work as a modern forum for people to cooperate with each other on any terms such as: questions, answers, quotes, critics, suggestions etc... 
 	  </p>
 	
 	</div>
 
     <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">how much worth 1kinger ??</h1><br>
+      <h1 class="w3-center">Is 1kinger cooperate with any other third-party firm ??</h1><br>
 
       <p class="w3-large">
+	  short answers : No. <br>
 	  
-	1kinger is doing all this things with out any financal support from any company. Also 1kinger isnt oficial legaly registred company which means that cant use the company privilage benefits like stock market shares, funds from investors, hevy bank credits, greedy subvencional funds, tax return etc..  .isnt use any  patreon,kickstart or any kind of dontaion for this whoul project ,. i do also somehow some other activity for chas flow.  that is the reason why my progres is litel bit slower to fix or create new projects.
-	  <p></p>
-	  <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+	1kinger is doing all this things without any financial support from any company.Also 1kinger isn't oficial legally registered company which means that cant use the company privilege benefits like stock market shares, funds from investors, heavy bank credits, greedy subvencion funds, tax return etc...  isn't use any patreon, kickstart or any kind of donation for this whole project. So, that is the reason why my progress is little bit slower to fix or create new projects. 
+	  <br><br>
+	 </p>
 	 <h5 class="w3-center  w3-text-grey">is there lincense by 1kinger for using 1kinger's products??</h5>
       <p class="w3-center ">
 	  
@@ -281,6 +285,21 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	  
 	  
     </div>
+	
+	
+	
+	    <div class="w3-col m6 w3-padding-large">
+      <h1 class="w3-center">what is <span class="w3-tag w3-light-grey">"1kinger"</span> name mean??</h1><br>
+
+      <p class="w3-large">
+	  short answers : Nothing. <br>
+	  
+	just simple label name to be before the name amazon in phone book ;D<p></p>
+	
+    </div>
+	
+	
+	
   </div>
   
   <hr>
@@ -369,7 +388,7 @@ Nanly 32 is android games colection app that is inspirated from old school MAME3
 <div class="w3-quarter">
 <div class="w3-card w3-white">
 <div   id="F1Fv2"  ></div>
-<iframe id="1pv2" width="100%" src="https://www.youtube.com/embed/jQUQfvWsH20" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="1pv2" width="100%" src="https://www.youtube.com/watch?v=IoVDOWMxsIM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="w3-container">
   <h4>show time</h4>
   <h3>playing virtuel games in real world</h3>
@@ -625,15 +644,15 @@ groupe of seintis are traped in sicret planet nlp-341-1a that theyr scintific ex
   
 
     <div class="w3-display-container mySlides ">
-      <img src="https://www.w3schools.com/w3images/coffee.jpg" style="width:100%">
+      <img src="./1-3te.jpg" style="width:100%">
  
     </div>
     <div class="w3-display-container mySlides">
-      <img src="https://www.w3schools.com/w3images/workbench.jpg" style="width:100%">
+      <img src="./2-3te.jpg" style="width:100%">
     
     </div>
     <div class="w3-display-container mySlides">
-      <img src="https://www.w3schools.com/w3images/sound.jpg" style="width:100%">
+      <img src="./3-3te.jpg" style="width:100%">
 
     </div>
 
@@ -654,12 +673,12 @@ groupe of seintis are traped in sicret planet nlp-341-1a that theyr scintific ex
     </div>
     <div class="w3-col l3 m6 w3-light-grey w3-container w3-padding-16">
       <h3>Inspiration</h3>
-      <p>I doing this as hobby and chalange to do hard and usfule things as low cost as it can be</p>
+      <p>I'm doing this as hobby and challenge to do hard and useful things as low cost as it can be</p>
     </div>
 
     <div class="w3-col l3 m6 w3-grey w3-container w3-padding-16">
       <h3> 107% Freedom</h3>
-      <p>Im doing this complitly alone with out any supervaisor or boss that can stop my progres</p>
+      <p>I'm doing this completely alone without any supervisor or boss that can stop my progress</p>
     </div>
 
     <div class="w3-col l3 m6 w3-dark-grey w3-container w3-padding-16">
@@ -669,7 +688,7 @@ groupe of seintis are traped in sicret planet nlp-341-1a that theyr scintific ex
 
     <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
       <h3>Focus</h3>
-      <p>just doing somthink that meybe can meke the world better and enjoyable place for everyone</p>
+      <p>just doing something that maybe can make the world better and enjoyable place for everyone</p>
     </div>
   </div>
 
@@ -686,7 +705,7 @@ groupe of seintis are traped in sicret planet nlp-341-1a that theyr scintific ex
         <div class="w3-container">
           <h3>NO ADDS</h3>
           <p class="w3-opacity">@ start</p>
-          <p>there isnt any adds in containt in any of products that are relised</p>
+          <p>there isn't any ads in any of products that are released</p>
 
         </div>
       </div>
@@ -698,7 +717,7 @@ groupe of seintis are traped in sicret planet nlp-341-1a that theyr scintific ex
         <div class="w3-container">
           <h3>NO any data colection</h3>
           <p class="w3-opacity">@ start</p>
-          <p>"1kinger" isnt taking it back any PERSONAL or DIVAICE or SOFTWARE data info from clients. no login account requarment </p>
+          <p>"1kinger" isn't taking it back any PERSONAL or DEVICE or SOFTWARE data info from clients. no login account requirement</p>
 
         </div>
       </div>
@@ -715,22 +734,9 @@ groupe of seintis are traped in sicret planet nlp-341-1a that theyr scintific ex
         </div>
       </div>
     </div>
-<!-- 
-    <div class="w3-third w3-margin-bottom">
-      <div class="w3-card-4">
-        <img src="https://www.w3schools.com/w3images/team3.jpg" alt="Jane" style="width:100%">
-        <div class="w3-container">
-          <h3>John Doe</h3>
-          <p class="w3-opacity">@ start</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-        </div>
-      </div>
-    </div>
-  
-  -->
-  
-  
+
+
+
   </div>
 
 
@@ -798,8 +804,7 @@ groupe of seintis are traped in sicret planet nlp-341-1a that theyr scintific ex
 <div class="w3-quarter">
 <h2 >Our Wor(king) projekts</h2>
 <p>
-I have some good ideat that i dewolp for world wide usage thata i think can help to someone somhow in any way. Here you can see all my projetcs that im doing.. many more will come in near future..
-
+I have some good ideas that i develop for world wide usage that i think can help to someone somehow in any way. Here you can see all my projects that i'm doing.. many more will come in near future..
 </p>
 </div>
 
