--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ Nanly 32 is android games colection app that is inspirated from old school MAME3
 <div class="w3-quarter">
 <div class="w3-card w3-white">
 <div   id="F1Fv2"  ></div>
-<iframe id="1pv2" width="100%" src="https://www.youtube.com/watch?v=IoVDOWMxsIM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="1pv2" width="100%" src="https://www.youtube.com/embed/IoVDOWMxsIM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="w3-container">
   <h4>show time</h4>
   <h3>playing virtuel games in real world</h3>
