--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ You can motivate through social media. it would be nice for you to share this st
 </nav>
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity" id="homeP1">
-  <img src="https://www.w3schools.com/w3images/sailboat.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <img src="./GGfotka nanlito sjt.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
 </div>
 
 <!-- Work Row -->
