--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 
-<body id="myPage" style="background-color:rgb(116,122,135)"  >
+<body id="myPage" style="background-color:rgb(116,122,135)" onload="document.getElementById('1s3').style.display='block'"  >
 
 
   <!-- Modal -->
@@ -160,7 +160,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-display-topright w3-text-teal">Close
     <i class="fa fa-remove"></i>
   </a>
-  <a onclick="document.getElementById('1p1').style.display='block';w3_close();" class="w3-bar-item w3-button">Nanly 32</a>
+  <a onclick="document.getElementById('1p1').style.display='block';w3_close();" class="w3-bar-item w3-button">Nanly32</a>
   <a onclick="document.getElementById('2p2').style.display='block';w3_close();" class="w3-bar-item w3-button">Special space force defenders</a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
   <a href="#" class="w3-bar-item w3-button">Link 4</a>
@@ -325,7 +325,7 @@ You can motivate through social media. it would be nice for you to share this st
   <div class="w0-modal-content w3-card-4 w3-animate-top"  style="top:0px;left:10%;">
     <header class="w3-container w3-teal w3-display-container"> 
       <span onclick="Frm1();document.getElementById('1p1').style.display='none'" class="w3-button w3-teal w3-display-topright"><i class="fa fa-remove"></i></span>
-      <h4>Nanly 32</h4>
+      <h4>Nanly32</h4>
 	  
     </header>
     <div class="w3-container">
@@ -357,18 +357,31 @@ You can motivate through social media. it would be nice for you to share this st
 </nav>
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity" id="homeP1">
-  <img src="./N 2500x1665.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <img src="https://www.w3schools.com/w3images/sailboat.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
 </div>
 
 <!-- Work Row -->
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="workP2">
 
 <div class="w3-quarter">
-<h2>Nanly 32</h2>
+<h2>Nanly32</h2>
 <p>
-Nanly 32 is android games colection app that is inspirated from old school MAME32 (ahh whata enjoyble woriless time,,). This app  allow you to play nonstop anywere what you wana , how you wanna  from reach selectio of 500+ games. this app use free game from mostwanted games html5 (HERE HAVE THYR CREDIT !!)that also allow you to save you progres in RAM memory. Once played when you have internet conection , you will be avaibele to play it endles weil the app isht shut it down.. see any video there is better discribed 
+Nanly32 is android games colection app that is inspirated from old school MAME32 (ahh whata enjoyble woriless time,,). This app  allow you to play nonstop anywere what you wana , how you wanna  from reach selectio of 500+ games. this app use free game from mostwanted games html5 (HERE HAVE THYR CREDIT !!)that also allow you to save you progres in RAM memory. Once played when you have internet conection , you will be avaibele to play it endles weil the app isht shut it down.. see any video there is better discribed 
 
 </p>
+</div>
+
+<div class="w3-quarter">
+<div class="w3-card w3-white">
+<div   id="F1Fv2"  ></div>
+<iframe id="1pv2" width="100%" src="https://www.youtube.com/embed/IoVDOWMxsIM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="w3-container">
+  <h4>show time</h4>
+  <h3>playing virtuel games in real world</h3>
+
+  <p> simple "best case scenario" exemples </p>
+  </div>
+  </div>
 </div>
 
 <div class="w3-quarter">
@@ -381,19 +394,6 @@ Nanly 32 is android games colection app that is inspirated from old school MAME3
   
 
   <p> fine art of games trend </p>
-  </div>
-  </div>
-</div>
-
-<div class="w3-quarter">
-<div class="w3-card w3-white">
-<div   id="F1Fv2"  ></div>
-<iframe id="1pv2" width="100%" src="https://www.youtube.com/embed/IoVDOWMxsIM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <div class="w3-container">
-  <h4>show time</h4>
-  <h3>playing virtuel games in real world</h3>
-
-  <p> simple "best case scenario" exemples </p>
   </div>
   </div>
 </div>
@@ -639,7 +639,7 @@ groupe of seintis are traped in sicret planet nlp-341-1a that theyr scintific ex
   </div>
 
   <!-- Slideshow -->
-  <div class="w3-container ">
+  <div id="1s3" class="w3-container " style="display:none;"  >
   
   
 
@@ -812,7 +812,7 @@ I have some good ideas that i develop for world wide usage that i think can help
 <div class="w3-card w3-white ">
   <img src="./GGfotka nanlito sjt.jpg"  style="width:100%">
   <div class="w3-container">
-  <h3>Nanly 32</h3>
+  <h3>Nanly32</h3>
   <h4>android app/(game)</h4>
   <p>play 500+ game</p>
   <p>save your game</p>
