--- a/index.html
+++ b/index.html
@@ -825,6 +825,9 @@ I have some good ideas that i develop for world wide usage that i think can help
   </div>
 </div>
 
+<!-- OVA DR PREOKT	
+
+
 <div class="w3-quarter">
 <div class="w3-card w3-white ">
   <img src="https://www.w3schools.com/w3images/lights.jpg"  alt="Lights" style="width:100%">
@@ -843,6 +846,8 @@ I have some good ideas that i develop for world wide usage that i think can help
   </div>
 </div>
 
+
+ -->
 <div class="w3-quarter" style="opacity:0.05;">
 <div class="w3-card w3-white ">
   <img src="https://www.w3schools.com/w3images/mountains.jpg" alt="Mountains" style="width:100%">
