--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ Nanly32 is android games colection app that is inspirated from old school MAME32
     <div class="w3-col m5">
     <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Download</span></div>
       <h3>get it from oficial google play store</h3>
-	  <img src="./g p l .png"  onclick="window.open('https://twitter.com/super1kinger')" title="https://twitter.com/super1kinger" style="cursor:pointer;width:70%;min-height:150px;max-height:550px;">       
+	  <img src="./g p l .png"  onclick="window.open('https://play.google.com/store/apps/details?id=com.qexample.Nanly32')" title="https://play.google.com/store/apps/details?id=com.qexample.Nanly32" style="cursor:pointer;width:70%;min-height:150px;max-height:550px;">       
     </div>
     <div class="w3-col m7">	
 	<p class="w3-center ">TECHNICAL SPECIFICATIONS :</p>
