--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-remove"></i>
   </a>
   <a onclick="document.getElementById('1p1').style.display='block';w3_close();" class="w3-bar-item w3-button">Nanly32</a>
-  <a onclick="document.getElementById('2p2').style.display='block';w3_close();" class="w3-bar-item w3-button">Special space force defenders</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
-  <a href="#" class="w3-bar-item w3-button">Link 4</a>
-  <a href="#" class="w3-bar-item w3-button">Link 5</a>
+  <a onclick="document.getElementById('2p2').style.display='block';w3_close();" class="w3-bar-item w3-button">empty</a>
+  <a href="#" class="w3-bar-item w3-button">empty</a>
+  <a href="#" class="w3-bar-item w3-button">empty</a>
+  <a href="#" class="w3-bar-item w3-button">empty</a>
 </nav>
 
 <!-- Navbar  w3-teal bese staroto -->
@@ -322,7 +322,7 @@ You can motivate through social media. it would be nice for you to share this st
 
 
 <div id="1p1" class="w0-modal">
-  <div class="w0-modal-content w3-card-4 w3-animate-top"  style="top:0px;left:10%;">
+  <div class="w0-modal-content w3-card-4 w3-animate-top"  style="top:0px;left:9%;">
     <header class="w3-container w3-teal w3-display-container"> 
       <span onclick="Frm1();document.getElementById('1p1').style.display='none'" class="w3-button w3-teal w3-display-topright"><i class="fa fa-remove"></i></span>
       <h4>Nanly32</h4>
@@ -335,10 +335,10 @@ You can motivate through social media. it would be nice for you to share this st
 <div id="myPage">
 
 <!-- Icon Bar (Sidebar - hidden on small screens)//////////////////////////nanly32 -->
-<nav class="w3-sidebar w3-bar-block w3-center "  style="font-size:55%;position:fixed;left:0px;top:0px;width:20%;z-index:555;overflow:hidden;" >
+<nav class="w3-sidebar w3-bar-block w3-center "  style="font-size:55%;position:fixed;left:0px;top:0px;width:18%;z-index:555;overflow:hidden;" >
   <!-- Avatar image in top left corner -->
   <img src="./g192.png" style="width:70%">
-  <a href="#homeP1" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <a href="#homeP1" class="w3-bar-item w3-button w3-padding-large ">
     <i class="fa fa-home w3-xlarge"></i>
     <p>HOME</p>
   </a>
@@ -357,7 +357,7 @@ You can motivate through social media. it would be nice for you to share this st
 </nav>
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity" id="homeP1">
-  <img src="https://www.w3schools.com/w3images/sailboat.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <img src="./N 2500x1665.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
 </div>
 
 <!-- Work Row -->
@@ -425,7 +425,7 @@ Nanly32 is android games colection app that is inspirated from old school MAME32
       <h3>get it from oficial google play store</h3>
 	  <img src="./g p l .png"  onclick="window.open('https://play.google.com/store/apps/details?id=com.qexample.Nanly32')" title="https://play.google.com/store/apps/details?id=com.qexample.Nanly32" style="cursor:pointer;width:70%;min-height:150px;max-height:550px;">       
     </div>
-    <div class="w3-col m7">	
+    <div class="w3-col m7" id="workP1">	
 	<p class="w3-center ">TECHNICAL SPECIFICATIONS :</p>
       <form class="w3-container w3-card-4 w3-padding-16 w3-white" >
       <div class="w3-section">
