--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@ Nanly32 is android games colection app that is inspirated from old school MAME32
 	  
       </div>
       <div class="w3-section">      
-    <label class="w3-input" type="text">memory ROM sortage : 50MB</label>
+    <label class="w3-input" type="text">memory ROM sortage : 3,1 MB</label>
       </div>
       <div class="w3-section">      
-    <label class="w3-input" type="text">memory RAM usage : 20-30MB</label>
+    <label class="w3-input" type="text">memory RAM usage : 20-30 MB</label>
       </div>
       <div class="w3-section">      
-  <label class="w3-input" type="text">app  version available : N32 ,N32+ssfd  </label>
+  <label class="w3-input" type="text">app  version available (in plan): N32 ,N32+ssfd  </label>
       </div>  
      <div class="w3-section">      
   <label class="w3-input" type="text">uste nekoje teksce : ke se dodade tuka</label>
